<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ReflexO</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world"></string>
    <string name="NewGame">New Game\nClassic</string>
    <string name="NewGameSpeed">New Game\nSpeed Run</string>
    <string name="LevelTitle">L E V E L  </string>
    <string name="LevelValue">1</string>
    <string name="HighScore">High\nScores</string>
    <string name="scoreTitle">Score</string>
    <string name="EnterUserName">Your\nName</string>
    <string name="GameNotificationFirstLevel">Click on correct shape!</string>
    <string name="GameNotificationBonusLevel">Bonus Level for Bonus Life</string>
    <string name="banner_ad_unit_id_test">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_main">ca-app-pub-8731252909086422/9401987591</string>
    <string name="banner_game">ca-app-pub-8731252909086422/1878720798</string>

</resources>
