<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bkg4"
    tools:context=".MainActivity" >


    <TextView
        android:id="@+id/notificationBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <Button
        android:id="@+id/button1"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_weight=".25"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/notificationBar"
        android:text="@string/NewGame"
        android:background="@drawable/button_main"
        android:typeface="monospace"
        android:textSize="35sp"
        android:shadowColor="#ffff00"
        android:shadowRadius="1.5"
        android:shadowDx="2"
        android:shadowDy="1"
        android:textColor="#493D26"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_weight=".25"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignRight="@+id/button1"
        android:layout_below="@+id/button4"
        android:text="@string/HighScore" 
        android:background="@drawable/button_main"
        android:typeface="monospace"
        android:textSize="35sp"
        android:shadowColor="#ffff00"
        android:shadowRadius="1.5"
        android:shadowDx="2"
        android:shadowDy="1"
        android:textColor="#493D26"/>
    <!-- 
     <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignRight="@+id/button1"
        android:layout_below="@+id/button2"
        android:text="@string/EnterUserName" 
        android:background="@drawable/button_main"
        android:typeface="monospace"
        android:textStyle="bold"
        android:textSize="35sp"
        android:shadowColor="#ffff00"
        android:shadowRadius="1.5"
        android:shadowDx="2"
        android:shadowDy="1"
        android:textColor="#493D26"/>
     -->
          <Button
        android:id="@+id/button4"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignRight="@+id/button1"
              android:layout_weight=".25"
              android:layout_below="@+id/button1"
        android:text="@string/NewGameSpeed" 
        android:background="@drawable/button_main"
        android:typeface="monospace"
        android:textSize="35sp"
        android:shadowColor="#ffff00"
        android:shadowRadius="1.5"
        android:shadowDx="2"
        android:shadowDy="1"
        android:textColor="#493D26"/>

    <com.google.android.gms.ads.AdView
        android:id="@+id/mainActivityBanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id_test">
    </com.google.android.gms.ads.AdView>
</RelativeLayout>